--- a/aquapi_config.yaml
+++ b/aquapi_config.yaml
@@ -1,10 +1,10 @@
 substitutions:
   # names
-  name: "aquapi-test"
-  friendly_name: "AquaPi-TEST"
+  name: "aquapi"
+  friendly_name: "AquaPi"
 
   # App Version - Updated: 8/2023
-  appVersion: "0.19.4"
+  appVersion: "0.19.5"
 
   # pins
   dallasPin: "4"
@@ -38,14 +38,14 @@ substitutions:
   cal_100_2: "100.0"
 
   # Import Config
-  import_config: "true"
+  import_config: "false"
 
 esphome:
   name: "${name}"
   friendly_name: "${friendly_name}"
   # Automatically add the mac address to the name
   name_add_mac_suffix: false
-  comment: AquaPi ESP32 Aquarium Controller & Monitor
+  comment: AquaPi ESP32 - Aquarium Controller & Monitor
   project:
     name: TheRealFalseReality.aquapi
     version: "${appVersion}"
@@ -64,7 +64,7 @@ api:
 ota:
 
 dashboard_import:
-  package_import_url: github://TheRealFalseReality/aquapi/aquapi_config.yaml@test
+  package_import_url: github://TheRealFalseReality/aquapi/aquapi_config.yaml@main
   import_full_config: ${import_config}
 
 wifi: 
