--- a/aquapi_config.yaml
+++ b/aquapi_config.yaml
@@ -4,7 +4,7 @@ substitutions:
   friendly_name: "AquaPi-TEST"
 
   # App Version - Updated: 8/2023
-  appVersion: "0.19.4-TEST"
+  appVersion: "0.19.4"
 
   # pins
   dallasPin: "4"
