--- a/aquapi_config.yaml
+++ b/aquapi_config.yaml
@@ -45,7 +45,7 @@ esphome:
   friendly_name: "${friendly_name}"
   # Automatically add the mac address to the name
   name_add_mac_suffix: false
-  comment: AquaPi ESP32 Aquarium Controller & Monitor
+  comment: AquaPi ESP32 - Aquarium Controller & Monitor
   project:
     name: TheRealFalseReality.aquapi
     version: "${appVersion}"
