--- a/aquapi_config.yaml
+++ b/aquapi_config.yaml
@@ -1,7 +1,7 @@
 substitutions:
   # names
-  name: "aquapi-test"
-  friendly_name: "AquaPi-TEST"
+  name: "aquapi"
+  friendly_name: "AquaPi"
 
   # App Version - Updated: 8/2023
   appVersion: "0.19.5"
