--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,8 @@ jobs:
   ci:
     name: Building ${{ matrix.file }}
     runs-on: ubuntu-latest
+    env:
+      ESPHOME_VERSION: 2023.7.1
     strategy:
       matrix:
         file:
