--- a/aquapi_config.yaml
+++ b/aquapi_config.yaml
@@ -392,12 +392,12 @@ text_sensor:
     ip_address:
       name: IP Address
       icon: mdi:ip-network
-    ssid:
-      name: Connected SSID
-      icon: mdi:wifi-arrow-left-right
-    bssid:
-      name: Connected BSSID
-      icon: mdi:wifi-star
+    # ssid:
+    #   name: Connected SSID
+    #   icon: mdi:wifi-arrow-left-right
+    # bssid:
+    #   name: Connected BSSID
+    #   icon: mdi:wifi-star
     mac_address:
       name: Mac Address
       icon: mdi:chip
