--- a/aquapi_config.yaml
+++ b/aquapi_config.yaml
@@ -3,7 +3,7 @@ substitutions:
   name: "aquapi"
   friendly_name: "AquaPi"
   # App Version - Updated: 8/2023
-  app_version: "0.21.1"
+  app_version: "0.21.2"
   # Import Config
   import_config: "false"
   # Logger Level
@@ -71,6 +71,11 @@ esphome:
   project:
     name: TheRealFalseReality.aquapi
     version: "${app_version}"
+  on_boot: 
+    then:
+      - component.update: water_level
+      - component.update: temp_range
+      - component.update: temp_range_2
 
 esp32:
   board: esp32dev
@@ -87,7 +92,7 @@ api:
 ota:
 
 dashboard_import:
-  package_import_url: github://TheRealFalseReality/aquapi/aquapi_config.yaml@test
+  package_import_url: github://TheRealFalseReality/aquapi/aquapi_config.yaml@main
   import_full_config: ${import_config}
 
 wifi: 
@@ -454,6 +459,7 @@ text_sensor:
       } else {
         return {"Uknown or Error"};
       }
+    
 
   # Temperature Range 1
   - platform: template
