--- a/aquapi_config.yaml
+++ b/aquapi_config.yaml
@@ -14,8 +14,8 @@ substitutions:
   dallasPin: "16"
   opticalHighPin: "33"
   opticalLowPin: "32"
-  sdaPin: "21"
-  sclPin: "22"
+  sdaPin: "21" // yellow
+  sclPin: "22" // blue
   
   # EZO Circuit Addresses
   # pH circuit, who's address is 99
