--- a/aquapi_config.yaml
+++ b/aquapi_config.yaml
@@ -12,8 +12,8 @@ substitutions:
 
   # pins
   dallasPin: "16"
-  opticalHighPin: "33"
-  opticalLowPin: "32"
+  opticalHighPin: "33" // yellow
+  opticalLowPin: "32" // blue
   sdaPin: "21" // yellow
   sclPin: "22" // blue
   
