--- a/aquapi_config.yaml
+++ b/aquapi_config.yaml
@@ -14,8 +14,8 @@ substitutions:
   dallasPin: "16"
   opticalHighPin: "33" // yellow
   opticalLowPin: "32" // blue
-  sdaPin: "21" // yellow
-  sclPin: "22" // blue
+  sdaPin: "21" // blue
+  sclPin: "22" // yellow
   
   # EZO Circuit Addresses
   # pH circuit, who's address is 99
