--- a/aquapi_config.yaml
+++ b/aquapi_config.yaml
@@ -3,7 +3,7 @@ substitutions:
   name: "aquapi"
   friendly_name: "AquaPi"
   # App Version - Updated: 8/2023
-  app_version: "1.1"
+  app_version: "1.2"
   # Import Config
   import_config: "false"
   # Logger Level
@@ -155,6 +155,23 @@ sensor:
   # Uptime sensor
   - platform: uptime
     name: Uptime
+
+  # of I2C devices connected
+  - platform: template
+    name: "I2C Devices Connected"
+    id: i2c_devices
+    lambda: |-
+      byte error, address;
+      int nDevices;
+      nDevices = 0;
+      for(address = 1; address < 127; address++) {
+        Wire.beginTransmission(address);
+        error = Wire.endTransmission();
+        if (error == 0) {
+          nDevices++;
+        }
+      }
+      return nDevices;
 
   # EZO Circuits (yellow - SCL/RX, blue - SDA/TX)
   # EZO Circuit - pH
